--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' -r tsconfig-paths/register src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^5.0.6",
+    "@types/fluent-ffmpeg": "^2.1.28",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "fft.js": "^4.0.4",
+    "fluent-ffmpeg": "^2.1.3",
+    "module-alias": "^2.2.3",
+    "nodemon": "^3.1.11",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "_moduleAliases": {
+    "@/routes": "dist/routes"
+  }
 }
