--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/multer": "^2.0.0",
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fft.js": "^4.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "module-alias": "^2.2.3",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "tsconfig-paths": "^4.2.0",
     "ws": "^8.18.3"
