--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/multer": "^2.0.0",
     "@types/ws": "^8.18.1",
+    "blurhash": "^2.0.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fft.js": "^4.0.4",
@@ -21,6 +22,7 @@
     "module-alias": "^2.2.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
+    "sharp": "^0.34.5",
     "tsconfig-paths": "^4.2.0",
     "ws": "^8.18.3"
   },
