--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/multer": "^2.0.0",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   },
   "_moduleAliases": {
     "@/routes": "dist/routes",
